<resources>
    <string name="Activity1">Inicio Sesión</string>
    <string name="Activity2">Registro</string>
    <string name="Activity3">Bienvenido a Reserved Disabled</string>
    <string name="Activity4">Reserved Disabled Maps</string>
    <string name="emailLogin">Correo Electrónico</string>
    <string name="passwordLogin">Password</string>
    <string name="startLogin">Iniciar</string>
    <string name="no_registerLogin">¿Aun no estas registrado?</string>
    <string name="registerLogin">Registrarse</string>
    <string name="start_invitedLogin">¿Quieres entrar como invitado?</string>
    <string name="invitedLogin">Invitado</string>
    <string name="passwordUser">Password:</string>
    <string name="emailUser">Correo Electrónico:</string>
    <string name="nameUser">Nombre:</string>
    <string name="emailRegister">Correo Electrónico</string>
    <string name="nameRegister">Nombre</string>
    <string name="passwordRegister">Contraseña</string>
    <string name="registerRegister">Registrar</string>
    <string name="registeruserRegister">Registro de Usuario</string>
    <string name="BienvenidoUser">Bienvenido a Reserved Disabled</string>

</resources>
