<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="187dp"
        android:layout_height="186dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/registro" />

    <EditText
        android:id="@+id/nameRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/nameRegister"
        android:inputType="text"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/emailRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/emailRegister"
        android:inputType="textEmailAddress"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/passwordRegister"
        android:inputType="textPassword"
        android:textSize="20dp" />

    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/registerRegister"
        android:textColor="@android:color/white" />


</LinearLayout>